@@ -2,13 +2,21 @@ package org.teamchallenge.bookshop.service.Impl;
 
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.PersistenceContext;
+import jakarta.persistence.TypedQuery;
 import jakarta.persistence.criteria.*;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.teamchallenge.bookshop.config.BookMapper;
 import org.teamchallenge.bookshop.dto.BookDto;
 import org.teamchallenge.bookshop.dto.BookInCatalogDto;
+import org.teamchallenge.bookshop.dto.CategoryDto;
+import org.teamchallenge.bookshop.enums.Category;
 import org.teamchallenge.bookshop.exception.BookNotFoundException;
+import org.teamchallenge.bookshop.exception.DropboxFolderCreationException;
+import org.teamchallenge.bookshop.exception.ImageUploadException;
 import org.teamchallenge.bookshop.model.Book;
 import org.teamchallenge.bookshop.repository.BookRepository;
 import org.teamchallenge.bookshop.service.BookService;
@@ -16,9 +24,13 @@ import org.teamchallenge.bookshop.service.DropboxService;
 import org.teamchallenge.bookshop.util.ImageUtil;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.atomic.AtomicInteger;
+
 
 @Service
 @RequiredArgsConstructor
@@ -33,38 +45,60 @@ public class BookServiceImpl implements BookService {
     public void addBook(BookDto bookDto) {
         Book book = bookMapper.dtoToEntity(bookDto);
         String folderName = "/" + UUID.randomUUID();
-        dropboxService.createFolder(folderName);
-        book.setTitleImage(dropboxService.uploadImage(
-                folderName + "/title.png",
-                ImageUtil.base64ToBufferedImage(book.getTitleImage()))
-        );
-        int counter = 1;
-        List<String> imageList = new ArrayList<>();
-        if (!book.getImages().isEmpty()) {
-            for (String s : book.getImages()) {
-                imageList.add(dropboxService.uploadImage(
-                        folderName + "/" + counter++ + ".png",
-                        ImageUtil.base64ToBufferedImage(s))
-                );
-            }
+        try {
+            dropboxService.createFolder(folderName);
+        } catch (DropboxFolderCreationException e) {
+            throw new DropboxFolderCreationException();
         }
-        book.setImages(imageList);
+
+        try {
+            book.setTitleImage(dropboxService.uploadImage(
+                    folderName + "/title.png",
+                    ImageUtil.base64ToBufferedImage(bookDto.getTitleImage()))
+            );
+        } catch (ImageUploadException e) {
+            throw new ImageUploadException();
+        }
+
+        AtomicInteger counter = new AtomicInteger(1);
+        List<String> images = bookDto.getImages();
+        List<String> links = new ArrayList<>();
+        if (images != null && !images.isEmpty()) {
+            List<CompletableFuture<String>> imageList = images.stream()
+                    .map(image -> CompletableFuture
+                            .supplyAsync(() -> dropboxService.uploadImage(
+                                    folderName + "/" +counter.getAndIncrement() + ".png",
+                                    ImageUtil.base64ToBufferedImage(image)
+                            ))
+                    )
+                    .toList();
+            imageList.forEach(future -> {
+                try {
+                    links.add(future.get());
+                } catch (InterruptedException | ExecutionException e) {
+                    throw new RuntimeException(e);
+                }
+            });
+        }
+        book.setImages(links);
         bookRepository.save(book);
     }
-
     @Override
     public BookDto getBookById(Long id) {
         Book book = bookRepository.findById(id).orElseThrow(BookNotFoundException::new);
+        List<String> images = book.getImages();
+        images.add(0, book.getTitleImage());
+        book.setQuantity(1);
+        book.setImages(images);
         return bookMapper.entityToDTO(book);
     }
 
     @Override
     public List<BookInCatalogDto> getBooksForSlider() {
-        return bookRepository.findAll()
-                .stream()
-                .filter(Book::getIsThisNotSlider)
-                .map(bookMapper::entityToCatalogDTO)
-                .toList();
+            return bookRepository.findSliderBooks()
+                    .stream()
+                    .map(bookMapper::entityToBookCatalogDTO)
+                    .toList();
     }
 
     @Override
@@ -88,22 +122,43 @@ public class BookServiceImpl implements BookService {
     }
 
     @Override
-    public List<BookDto> getAllBooks() {
-        return bookRepository.findAll()
-                .stream()
-                .filter(book -> book.getIsThisNotSlider() == null || !book.getIsThisNotSlider())
+    public List<CategoryDto> getAllCategory() {
+        return Arrays.stream(Category.values())
+                .map(category -> new CategoryDto(category.getId(), category.getName()))
+                .toList();
+    }
+
+    public BookInCatalogDto getFirstBookByTitle(String title) {
+        return bookRepository.findFirstByTitleContainingIgnoreCase(title)
+                .map(bookMapper::entityToBookCatalogDTO)
+                .orElseThrow(BookNotFoundException::new);
+    }
+
+    public Page<BookDto> getAllBooks(Pageable pageable) {
+        CriteriaBuilder criteriaBuilder = entityManager.getCriteriaBuilder();
+        CriteriaQuery<Book> query = criteriaBuilder.createQuery(Book.class);
+        Root<Book> root = query.from(Book.class);
+        root.fetch("images", JoinType.LEFT);
+        List<Predicate> predicates = getPredicatesForBooks(criteriaBuilder, root);
+        query.where(predicates.toArray(new Predicate[0]));
+        TypedQuery<Book> typedQuery = entityManager.createQuery(query);
+        typedQuery.setFirstResult((int) pageable.getOffset());
+        typedQuery.setMaxResults(pageable.getPageSize());
+        List<Book> bookList = typedQuery.getResultList();
+        List<BookDto> bookDtoList = bookList.stream()
                 .map(bookMapper::entityToDTO)
-                .collect(Collectors.toList());
+                .toList();
+        CriteriaQuery<Long> countQuery = criteriaBuilder.createQuery(Long.class);
+        Root<Book> countRoot = countQuery.from(Book.class);
+        List<Predicate> newPredicates = getPredicatesForBooks(criteriaBuilder, countRoot);
+        countQuery.select(criteriaBuilder.count(countRoot)).where(newPredicates.toArray(new Predicate[0]));
+        long totalCount = entityManager.createQuery(countQuery).getSingleResult();
+        return new PageImpl<>(bookDtoList, pageable, totalCount);
     }
 
     @Override
-    public BookInCatalogDto getBookByTitle(String title) {
-        Book book = bookRepository.findByTitleIgnoreCase(title).orElseThrow(BookNotFoundException::new);
-        return bookMapper.entityToCatalogDTO(book);
-    }
-
-    @Override
-    public List<BookDto> getSorted(String category,
+    public Page<BookDto> getSorted(Pageable pageable,
+                                   Integer categoryId,
                                    String timeAdded,
                                    String price,
                                    String author,
@@ -112,21 +167,11 @@ public class BookServiceImpl implements BookService {
         CriteriaBuilder criteriaBuilder = entityManager.getCriteriaBuilder();
         CriteriaQuery<Book> query = criteriaBuilder.createQuery(Book.class);
         Root<Book> root = query.from(Book.class);
-        List<Order> orders = new ArrayList<>();
-        List<Predicate> predicates = new ArrayList<>();
-        if (category != null) {
-            predicates.add(criteriaBuilder.equal(root.get("category"), category));
-        }
-        if (author != null) {
-            predicates.add(criteriaBuilder.equal(root.get("category"), category));
-        }
-        if (priceMin != null) {
-            predicates.add(criteriaBuilder.ge(root.get("price"), priceMin));
-        }
-        if (priceMax != null) {
-            predicates.add(criteriaBuilder.le(root.get("price"), priceMax));
-        }
+        root.fetch("images", JoinType.LEFT);
+        List<Predicate> predicates = getPredicatesForFilter(criteriaBuilder, categoryId, author, priceMin, priceMax, root);
         query.where(predicates.toArray(new Predicate[0]));
+
+        List<Order> orders = new ArrayList<>();
         if (timeAdded != null) {
             if (timeAdded.equalsIgnoreCase("asc")) {
                 orders.add(criteriaBuilder.asc(root.get("timeAdded")));
@@ -135,18 +180,59 @@ public class BookServiceImpl implements BookService {
             }
         }
         if (price != null) {
-           if (price.equalsIgnoreCase("asc")) {
+            if (price.equalsIgnoreCase("asc")) {
                 orders.add(criteriaBuilder.asc(root.get("price")));
             } else {
                 orders.add(criteriaBuilder.desc(root.get("price")));
             }
         }
-
         query.orderBy(orders);
-        return entityManager.createQuery(query)
-                    .getResultList()
-                    .stream()
-                    .map(bookMapper::entityToDTO)
-                    .toList();
+
+        TypedQuery<Book> typedQuery = entityManager.createQuery(query);
+        typedQuery.setFirstResult((int) pageable.getOffset());
+        typedQuery.setMaxResults(pageable.getPageSize());
+        List<Book> bookList = typedQuery.getResultList();
+        List<BookDto> bookDtoList = bookList.stream()
+                .map(bookMapper::entityToDTO)
+                .toList();
+
+        CriteriaQuery<Long> countQuery = criteriaBuilder.createQuery(Long.class);
+        Root<Book> countRoot = countQuery.from(Book.class);
+        List<Predicate> newPredicates = getPredicatesForFilter(criteriaBuilder, categoryId, author, priceMin, priceMax, countRoot);
+        countQuery.select(criteriaBuilder.count(countRoot)).where(newPredicates.toArray(new Predicate[0]));
+        long totalCount = entityManager.createQuery(countQuery).getSingleResult();
+        return new PageImpl<>(bookDtoList, pageable, totalCount);
+    }
+
+
+    private List<Predicate> getPredicatesForBooks(CriteriaBuilder criteriaBuilder, Root<Book> root) {
+        return List.of(criteriaBuilder.equal(root.get("isThisSlider"), false));
+    }
+
+    private static List<Predicate> getPredicatesForFilter(CriteriaBuilder criteriaBuilder,
+                                                          Integer categoryId,
+                                                          String author,
+                                                          Float priceMin,
+                                                          Float priceMax,
+                                                          Root<Book> root) {
+        List<Predicate> predicates = new ArrayList<>();
+        if (categoryId != null) {
+            Category categoryEnum = Category.getFromId(categoryId);
+            Predicate categoryPredicate = criteriaBuilder.equal(root.get("category"), categoryEnum);
+            predicates.add(categoryPredicate);
+        }
+        if (author != null) {
+            Predicate authorPredicate = criteriaBuilder.equal(root.get("authors"), author);
+            predicates.add(authorPredicate);
+        }
+        if (priceMin != null) {
+            Predicate priceMinPredicate = criteriaBuilder.ge(root.get("price"), priceMin);
+            predicates.add(priceMinPredicate);
+        }
+        if (priceMax != null) {
+            Predicate priceMaxPredicate = criteriaBuilder.le(root.get("price"), priceMax);
+            predicates.add(priceMaxPredicate);
+        }
+        return predicates;
     }
 };
